[package]
name = "fbuild-config"
description = "PlatformIO INI parser, board config, MCU specs for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — distribution is PyPI + GitHub Releases;
# this member exists purely for internal compile parallelism. FastLED/fbuild#1008.
publish = false

[[bin]]
name = "enrich_boards"
path = "src/bin/enrich_boards.rs"

[dependencies]
fbuild-core = { path = "../fbuild-core" }
include_dir = "0.7.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
fbuild-paths = { path = "../fbuild-paths" }
tempfile = { workspace = true }
