[package]
name = "fbuild-core"
description = "Core types, errors, and utilities for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
# Tier-1 USB VID:PID resolver — see `crate::usb`.
usb-ids = { workspace = true }
# Process containment primitive (Job Objects on Windows; process groups +
# PR_SET_PDEATHSIG on Linux; process groups on macOS). The single global
# `ContainedProcessGroup` owned by the daemon ensures every child process
# spawned through `fbuild_core::subprocess::run_command` (and the emulator
# helpers) dies with the daemon. See FastLED/fbuild#32.
running-process = { workspace = true }
# Async helpers for the tokio integration in `containment::tokio_spawn` —
# we need the `process` feature so `tokio::process::Command` is in scope.
tokio = { workspace = true }

# `libc::setpgid` / `libc::prctl` for the Unix `pre_exec` hook used by
# `containment::tokio_spawn::configure`. See FastLED/fbuild#32.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
