[package]
name = "fbuild-core"
description = "Core types, errors, and utilities for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — distribution is PyPI + GitHub Releases;
# this member exists purely for internal compile parallelism. FastLED/fbuild#1008.
publish = false

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
# Aggregator backend for the `online-data` workflow only: `examples/dump_usb_ids.rs`
# uses this to feed tier-1 into `online-data/data/usb-vid.json`. The fbuild
# runtime resolver no longer touches this crate — it goes through the
# compile-time-embedded `usb-vendors.tar.zst` archive instead (see
# `crate::usb::embedded`).
usb-ids = { workspace = true }
# Embedded USB-vendor archive decompression + extraction at first use.
# Pulled in as workspace deps so other crates can share the same zstd / tar
# wire format without per-crate version drift.
zstd = { workspace = true }
tar = { workspace = true }
prost = { workspace = true }
# Process containment primitive (Job Objects on Windows; process groups +
# PR_SET_PDEATHSIG on Linux; process groups on macOS). The single global
# `ContainedProcessGroup` owned by the daemon ensures every child process
# spawned through `fbuild_core::subprocess::run_command` (and the emulator
# helpers) dies with the daemon. See FastLED/fbuild#32.
running-process = { workspace = true }
# Async helpers for the tokio integration in `containment::tokio_spawn` —
# we need the `process` feature so `tokio::process::Command` is in scope.
# Also drives the async `subprocess::run_command*` surface introduced
# in the full-async runtime conversion (#813).
tokio = { workspace = true }
# Used by future async trait surfaces folded under this crate. Added in
# the #813 Phase A foundation so downstream crates can `use async_trait`
# without each one redeclaring the workspace dep.
async-trait = { workspace = true }
# Shared HTTP client bridge (FastLED/fbuild#844). The `client()`
# constructor is hoisted from fbuild-packages so every reqwest call site
# in the workspace has one source of truth. See `src/http.rs` and the
# matching `ban_bare_reqwest` dylint.
reqwest = { workspace = true }

# `libc::setpgid` / `libc::prctl` for the Unix `pre_exec` hook used by
# `containment::tokio_spawn::configure`. See FastLED/fbuild#32.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
