[package]
name = "fbuild-daemon"
description = "HTTP/WebSocket daemon server for fbuild (axum-based, replaces FastAPI)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fbuild-daemon"
path = "src/main.rs"

[lib]
name = "fbuild_daemon"
path = "src/lib.rs"

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-config = { path = "../fbuild-config" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-packages = { path = "../fbuild-packages" }
fbuild-serial = { path = "../fbuild-serial" }
fbuild-build = { path = "../fbuild-build" }
fbuild-deploy = { path = "../fbuild-deploy" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
serialport = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
# socket2 used in main.rs to set SO_REUSEADDR (Unix) /
# SO_EXCLUSIVEADDRUSE (Windows) before binding the daemon's TCP listener,
# so the daemon can recover when a previous (crashed) instance left
# CLOSE_WAIT/TIME_WAIT entries on the port without permitting port hijack
# on Windows. See ISSUES.md "Issue B5a".
socket2 = "0.6"

# libc::kill(pid, 0) is used as a probe to detect dead daemon PIDs at
# startup (stale-PID cleanup). Unix-only — Windows uses a manual
# OpenProcess FFI in main.rs.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.mimalloc]
workspace = true

[dev-dependencies]
fbuild-test-support = { path = "../fbuild-test-support" }
tempfile = { workspace = true }
