[package]
name = "fbuild-daemon"
description = "HTTP/WebSocket daemon server for fbuild (axum-based, replaces FastAPI)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — distribution is PyPI + GitHub Releases;
# this member exists purely for internal compile parallelism. FastLED/fbuild#1008.
publish = false

[[bin]]
name = "fbuild-daemon"
path = "src/main.rs"

[lib]
name = "fbuild_daemon"
path = "src/lib.rs"

[features]
# Compile native espflash-backed ESP32 verify/write support into the daemon
# by default. Runtime fallback still routes through esptool automatically if
# the native path fails on a board/host combination.
default = ["espflash-native"]
espflash-native = ["fbuild-deploy/espflash-native"]
# Note (FastLED/fbuild#800 / Phase 4 stage 2 of #789): the prior
# `embedded` feature was deleted. The embedded zccache backend is
# now compiled in unconditionally via `fbuild-build`'s direct dep,
# and the wrapper-mode code path is gone.

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-config = { path = "../fbuild-config" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-packages = { path = "../fbuild-packages" }
fbuild-serial = { path = "../fbuild-serial" }
fbuild-build = { path = "../fbuild-build" }
fbuild-deploy = { path = "../fbuild-deploy" }
tokio = { workspace = true }
sha2 = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
serialport = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
# running-process + prost back the v1 broker adoption module (src/broker/),
# folded in from the former standalone fbuild-broker crate (FastLED/fbuild#560).
running-process = { workspace = true }
prost = { workspace = true }
interprocess = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
# socket2 used in main.rs to set SO_REUSEADDR (Unix) /
# SO_EXCLUSIVEADDRUSE (Windows) before binding the daemon's TCP listener,
# so the daemon can recover when a previous (crashed) instance left
# CLOSE_WAIT/TIME_WAIT entries on the port without permitting port hijack
# on Windows. See ISSUES.md "Issue B5a".
socket2 = "0.6"

# libc::kill(pid, 0) is used as a probe to detect dead daemon PIDs at
# startup (stale-PID cleanup). Unix-only; Windows uses a manual
# OpenProcess FFI in main.rs.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.mimalloc]
workspace = true

[dev-dependencies]
fbuild-test-support = { path = "../fbuild-test-support" }
# reqwest is used by tests/test_emu_endpoint.rs to issue a real HTTP POST
# against a router mounted on an ephemeral loopback port, matching the
# client-side path that fails in issue #130.
reqwest = { workspace = true }

# libc::kill(pid, SIGKILL) is used by the process-containment integration
# test (tests/process_containment.rs). Unix-only; Windows uses taskkill /F.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
