[package]
name = "fbuild-deploy"
description = "Firmware deployment via esptool/avrdude/picotool for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — distribution is PyPI + GitHub Releases;
# this member exists purely for internal compile parallelism. FastLED/fbuild#1008.
publish = false

[features]
# Compile the native espflash-backed verify/write paths by default. The
# ESP32 deployer keeps the esptool subprocess path as an automatic runtime
# fallback when native connect/verify/write fails.
default = ["espflash-native"]
espflash-native = ["dep:espflash", "dep:md-5"]

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-config = { path = "../fbuild-config" }
fbuild-packages = { path = "../fbuild-packages" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-serial = { path = "../fbuild-serial" }
serialport = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }
object = { workspace = true }
# Native ESP32 flasher protocol (issue #66). The `serialport` feature
# gates the `Flasher` type (the real transport entry point), so it is
# enabled while espflash's CLI/TUI defaults stay off.
espflash = { version = "4", default-features = false, features = ["serialport"], optional = true }
# Local MD5 of firmware regions for comparison against espflash's on-chip
# `FLASH_MD5SUM` command. Optional and gated behind `espflash-native`
# since it is only used by the native verify path.
md-5 = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
fbuild-test-support = { path = "../fbuild-test-support" }
zip = { workspace = true }
