[package]
name = "fbuild-header-scan"
description = "Line-oriented C/C++ #include scanner and transitive include-graph walker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
fbuild-paths = { path = "../fbuild-paths" }
tempfile = { workspace = true }

[[bench]]
name = "scan_throughput"
harness = false
