[package]
name = "fbuild-library-select"
description = "PlatformIO-LDF-style library resolver using the fbuild header scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fbuild-header-scan = { path = "../fbuild-header-scan" }
fbuild-packages = { path = "../fbuild-packages" }
tracing = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
zccache-artifact = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
fbuild-test-support = { path = "../fbuild-test-support" }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[[bench]]
name = "resolve_cold"
harness = false

[[bench]]
name = "resolve_warm"
harness = false
