[package]
name = "fbuild-packages-fetch"
description = "Fetch primitives (http, download, extract, cache, disk-cache) + Package/Toolchain/Framework base traits for fbuild. FastLED/fbuild#1008."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — internal compile-parallelism split. FastLED/fbuild#1008.
publish = false

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-config = { path = "../fbuild-config" }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
xz2 = { workspace = true }
bzip2 = { workspace = true }
zstd = { workspace = true }
semver = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
