[package]
name = "fbuild-python"
description = "PyO3 Python bindings for fbuild (SerialMonitor, Daemon, BuildContext)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]
# PyO3 extension-module crates cannot be doctested: rustdoc links the doctest
# harness without libpython, so the pyo3 macros fail to resolve. There are no
# doc examples here anyway.
doctest = false

[build-dependencies]
pyo3-build-config = "0.22"

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-serial = { path = "../fbuild-serial" }
fbuild-paths = { path = "../fbuild-paths" }
pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
running-process = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
