[package]
name = "fbuild-serial"
description = "Serial port management, shared serial manager, deploy preemption for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fbuild-core = { path = "../fbuild-core" }
serialport = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
