[package]
name = "fbuild-serial"
description = "Serial port management, shared serial manager, deploy preemption for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — distribution is PyPI + GitHub Releases;
# this member exists purely for internal compile parallelism. FastLED/fbuild#1008.
publish = false

[dependencies]
fbuild-core = { path = "../fbuild-core" }
serialport = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }

# Windows serial-port enumeration that (unlike upstream serialport) does not
# drop devnodes with a non-OK PnP problem status — see `src/ports.rs`.
# FastLED/fbuild#962. Version matches serialport 4.9's windows-sys pin.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_System_Registry",
] }

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = { workspace = true }
