[package]
name = "fbuild-test-support"
description = "Test utilities and fixtures for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
object = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
fbuild-config = { path = "../fbuild-config" }
fbuild-packages = { path = "../fbuild-packages" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-header-scan = { path = "../fbuild-header-scan" }
fbuild-library-select = { path = "../fbuild-library-select" }
