[package]
name = "ban_direct_serialport"
version = "0.1.0"
description = "Ban direct use of the serialport crate outside fbuild-serial"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Pinned to the same dylint_linting rev the other fbuild dylints use —
# same rustup channel in rust-toolchain.toml, same upstream commit.
dylint_linting = { git = "https://github.com/trailofbits/dylint", rev = "4bd91ce7729b74c7ee5664bbb588f7baf30b4a09" }

[dev-dependencies]
dylint_testing = { git = "https://github.com/trailofbits/dylint", rev = "4bd91ce7729b74c7ee5664bbb588f7baf30b4a09" }

[package.metadata.rust-analyzer]
rustc_private = true
