[package]
name = "ban_manual_slash_normalize"
# Bump the version to bust the dylint .so cache when allowlist.txt
# changes (setup-soldr's dylint-cache key hashes the manifest but not
# src/allowlist.txt). Same convention ban_std_pathbuf follows.
version = "0.1.0"
description = "Ban manual '.replace(\\, /)' backslash-to-slash rewrites"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# `5.0.0` on crates.io predates the 2026-03-18 rustc_session layout change
# used by newer nightlies / Rust 1.94-era toolchains. Track the upstream
# compatibility fix until a newer crates.io release is available.
dylint_linting = { git = "https://github.com/trailofbits/dylint", rev = "4bd91ce7729b74c7ee5664bbb588f7baf30b4a09" }

[dev-dependencies]
dylint_testing = { git = "https://github.com/trailofbits/dylint", rev = "4bd91ce7729b74c7ee5664bbb588f7baf30b4a09" }

[package.metadata.rust-analyzer]
rustc_private = true
